--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask
-Pillow
-opencv-python
-numpy
 tensorflow
-gunicorn # For production deployment
+numpy
+opencv-python-headless # Use this for cv2 on servers without a display
+Pillow
+Flask-CORS           # <--- ADD THIS LINE
+gunicorn             # If you're using Gunicorn to serve your app
