--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGO_URI="mongodb+srv://ujjawalkumar0987:tMhIXPLMuanQbpWl@covid-19-detection.fn1u46o.mongodb.net/?retryWrites=true&w=majority&appName=covid-19-detection"
+FLASK_ENV=production
+
+FRONTEND_ORIGIN="https://covid-19-detection-frontend.netlify.app"
