--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ Flask-CORS           # <--- ADD THIS LINE
 gunicorn             # If you're using Gunicorn to serve your app
 pymongo # <--- ADD THIS LINE
 python-dotenv # <--- ADD THIS LINE (for local development .env file)
+streamlit
